--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
-    kakao_flutter_sdk: ^1.1.0
 
 dev_dependencies:
     flutter_test:
@@ -62,6 +61,7 @@ flutter:
     uses-material-design: true
     assets:
         - assets/images/logo.png
+        - assets/images/logo_filed.png
 
     # To add assets to your application, add an assets section, like this:
     # assets:
