--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.2
     kakao_flutter_sdk: ^1.1.0
+    provider: ^6.0.5
 
 dev_dependencies:
     flutter_test:
