--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     cupertino_icons: ^1.0.2
     kakao_flutter_sdk: ^1.1.0
     provider: ^6.0.4
+    share: ^2.0.4
 
 dev_dependencies:
     flutter_test:
