--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     kakao_flutter_sdk: ^1.1.0
     provider: ^6.0.4
     share: ^2.0.4
+    google_sign_in: ^5.4.1
 
 dev_dependencies:
     flutter_test:
