fix: log in button ui fix

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
     assets:
         - assets/images/logo.png
         - assets/images/logo_filled.png
+        - assets/images/google.png
+        - assets/images/kakao.png
 
     # To add assets to your application, add an assets section, like this:
     # assets:
