--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
     provider: ^6.0.4
     share: ^2.0.4
     google_sign_in: ^5.4.1
+    dio: ^5.3.4
+    envied: ^0.5.2
 
 dev_dependencies:
     flutter_test:
